estructura inicial de los header mobile/desktop en html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,75 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link rel="stylesheet" href="/src/css/main.css">
     <title>The legend of Zelda: Breath of the wild.</title>
 </head>
 <body>
-    
+    <div id="main-container">
+        <header>
+            <nav>
+                <!-- MENU MOBILE -->
+                <div class="mobile">
+                    <!-- HEADER MOBILE -->
+                    <header class="header">
+                        <button id="bmenu">
+                            <span class="material-icons">&#xe5d2;</span><!-- para usar el codigo es: &#x"codigo del icono"; es decir, el ampersand, el numeral la x y al final el ';' -->
+                        </button>
+
+                        <!-- Logo de nintendo -->
+                        <a href="#">Nintendo</a>
+
+
+                        <div>
+                            <a href=""><span class="material-icons">&#xe8cc;</span></a>
+                            <a href=""><span class="material-icons">&#xe853;</span></a>
+                        </div>
+                    </header>
+
+                    <!-- LINKS -->
+                    <div class="links">
+                        <a href="#">Game Pass</a>
+                        <a href="#">Games</a>
+                        <a href="#">Devices</a>
+                        <a href="#">Cloud Gaming</a>
+                        <a href="#">Community</a>
+                        <a href="#">Support</a>
+                        <a href="#">My Nintendo</a>
+                        <a href="#">Search</a>
+                    </div>
+                </div>
+
+                <!-- MENU DESKTOP -->
+                <ul>
+                    <li><a href="#">Nintendo</a></li>
+                    <li><a href="#" class="link">Game Pass</a></li>
+                    <li><a href="#" class="link">Games</a></li>
+                    <li><a href="#" class="link link-hide">Devices</a></li>
+                    <li><a href="#" class="link link-hide">Cloud Gaming</a></li>
+                    <li><a href="#" class="link link-hide">Community</a></li>
+                    <li><a href="#" class="link link-hide">Support</a></li>
+                    <li><a href="#" class="link link-hide">My Nintendo</a></li>
+                    <li class="more">
+                        <a href="#" class="link" id="bmore">More</a>
+                        <div class="menu">
+                            <a href="#">Devices</a>
+                            <a href="#">Cloud Gaming</a>
+                            <a href="#">Community</a>
+                            <a href="#">Support</a>
+                            <a href="#">My Nintendo</a>
+                        </div>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li><a href="#" class="link">Search</a></li>
+                    <li><a href="#" class="link">Cart</a></li>
+                    <li><a href="#" class="link">Sign In</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
 </body>
 </html>
