agregue el script y las imagenes del logo

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
                 <!-- MENU MOBILE -->
                 <div class="mobile">
                     <!-- HEADER MOBILE -->
-                    <header class="header">
+                    <div class="header">
                         <button id="bmenu">
                             <span class="material-icons">&#xe5d2;</span><!-- para usar el codigo es: &#x"codigo del icono"; es decir, el ampersand, el numeral la x y al final el ';' -->
                         </button>
 
                         <!-- Logo de nintendo -->
-                        <a href="#">Nintendo</a>
+                        <a href="#"><img src="/src/img/logo-nintendo.png" width="100px" alt=""></a>
 
 
                         <div>
                             <a href=""><span class="material-icons">&#xe8cc;</span></a>
                             <a href=""><span class="material-icons">&#xe853;</span></a>
                         </div>
-                    </header>
+                    </div>
 
                     <!-- LINKS -->
                     <div class="links">
@@ -46,7 +46,7 @@
 
                 <!-- MENU DESKTOP -->
                 <ul>
-                    <li><a href="#">Nintendo</a></li>
+                    <li><a href="#"><img src="/src/img/logo-nintendo.png" width="90px" alt=""></a></li>
                     <li><a href="#" class="link">Game Pass</a></li>
                     <li><a href="#" class="link">Games</a></li>
                     <li><a href="#" class="link link-hide">Devices</a></li>
@@ -74,5 +74,6 @@
             </nav>
         </header>
     </div>
+    <script src="/src/js/main.js"></script>
 </body>
 </html>
