agregue la section de banner

--- a/index.html
+++ b/index.html
@@ -73,6 +73,22 @@
                 </ul>
             </nav>
         </header>
+
+        <!-- BANNER -->
+        <section id="banner">
+            <h1>Breath of the wild</h1>
+            <p>
+                <a href="#" class="red-button">
+                    Get it Now <span class="material-icons">&#xe5cc;</span>
+                </a>
+            </p>
+            <p>Avaliable now on Nintendo Switch</p>
+            <p>
+                <a href="#" class="red-link">
+                    BUY IT NOW <span class="material-icons">&#xe5cc;</span>
+                </a>
+            </p>
+        </section>
     </div>
     <script src="/src/js/main.js"></script>
 </body>
