cambie el nombre por la img del logo de botw en la linea 79

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <!-- BANNER -->
         <section id="banner">
-            <h1>Breath of the wild</h1>
+            <img src="/src/img/BotW_Logo_alternativo.png" width="250px" alt="">
             <p>
                 <a href="#" class="red-button">
                     Get it Now <span class="material-icons">&#xe5cc;</span>
