cambie los class de los button por id en controls

--- a/index.html
+++ b/index.html
@@ -89,6 +89,40 @@
                 </a>
             </p>
         </section>
+
+        <!-- SECTION VIDEOS -->
+        <section id="videos">
+            <h2>SAVE HYRULE</h2>
+
+            <p class="w-75">
+                Ten thousand years before the start of the game, Hyrule is an advanced civilization that built four huge animal-like machines called divine beasts and a legion of guardians to ward off Ganon.
+                When Ganon returned, he was defeated by a princess with the help of the four champions and a knight.
+            </p>
+
+            <h3>Trailers and Gameplay</h3>
+
+            <div id="slider">
+                <!-- CONTROLS -->
+                <div id="controls">
+                    <button id="prev">
+                        <span class="material-icons">&#xe5e0;</span>
+                    </button>
+                    <button id="next">
+                        <span class="material-icons">&#xe5e1;</span>
+                    </button>
+                </div>
+
+                <!-- CURRENT -->
+                <div id="current">
+                    <!-- se agrega dinamicamente -->
+                </div>
+
+                <!-- VIDEOS CONTAINER -->
+                <div id="videos-container">
+                    <!-- se agrega dinamicamente -->
+                </div>
+            </div>
+        </section>
     </div>
     <script src="/src/js/main.js"></script>
 </body>
