agregue ids para el intersection observer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel="stylesheet" href="/src/css/main.css">
-    <title>The legend of Zelda: Breath of the wild.</title>
+    <link rel="icon" type="image/ico" href="/src/img/favicon.ico"/>
+    <title>The legend of Zelda™: Breath of the wild.</title>
 </head>
 <body>
     <div id="main-container">
@@ -92,9 +93,9 @@
 
         <!-- SECTION VIDEOS -->
         <section id="videos">
-            <h2>SAVE HYRULE</h2>
+            <h2 id="save-h">SAVE HYRULE</h2>
 
-            <p class="w-75">
+            <p id="sinop" class="w-75">
                 Ten thousand years before the start of the game, Hyrule is an advanced civilization that built four huge animal-like machines called divine beasts and a legion of guardians to ward off Ganon.
                 When Ganon returned, he was defeated by a princess with the help of the four champions and a knight.
             </p>
@@ -121,6 +122,13 @@
                 <div id="videos-container">
                     <!-- se agrega dinamicamente -->
                 </div>
+            </div>
+        </section>
+
+        <!-- DLCs -->
+        <section id="id">
+            <div class="info">
+                <h2>Hola</h2>
             </div>
         </section>
     </div>
