agregue los id necesarios para el intersection observer (96, 98)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="main-container">
         <header>
-            <nav>
+            <nav id="nav-h">
                 <!-- MENU MOBILE -->
                 <div class="mobile">
                     <!-- HEADER MOBILE -->
