update: cambios de id en el menu desktop

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="main-container">
         <header>
-            <nav id="nav-h">
+            <nav>
                 <!-- MENU MOBILE -->
                 <div class="mobile">
                     <!-- HEADER MOBILE -->
@@ -46,7 +46,7 @@
                 </div>
 
                 <!-- MENU DESKTOP -->
-                <ul>
+                <ul id="nav-h">
                     <li><a href="#"><img src="/src/img/logo-nintendo.png" width="90px" alt=""></a></li>
                     <li><a href="#" class="link">Game Pass</a></li>
                     <li><a href="#" class="link">Games</a></li>
@@ -67,7 +67,7 @@
                     </li>
                 </ul>
 
-                <ul>
+                <ul id="nav-h2">
                     <li><a href="#" class="link">Search</a></li>
                     <li><a href="#" class="link">Cart</a></li>
                     <li><a href="#" class="link">Sign In</a></li>
@@ -77,14 +77,14 @@
 
         <!-- BANNER -->
         <section id="banner">
-            <img src="/src/img/BotW_Logo_alternativo.png" width="250px" alt="">
-            <p>
+            <img id="banner-img" src="/src/img/BotW_Logo_alternativo.png" width="250px" alt="">
+            <p id="banner-btn">
                 <a href="#" class="red-button">
                     Get it Now <span class="material-icons">&#xe5cc;</span>
                 </a>
             </p>
-            <p>Avaliable now on Nintendo Switch</p>
-            <p>
+            <p id="banner-text">Avaliable now on Nintendo Switch</p>
+            <p id="banner-btn2">
                 <a href="#" class="red-link">
                     BUY IT NOW <span class="material-icons">&#xe5cc;</span>
                 </a>
