--- a/index.html
+++ b/index.html
@@ -126,9 +126,12 @@
         </section>
 
         <!-- DLCs -->
-        <section id="id">
+        <section id="dlc-section">
             <div class="info">
-                <h2>Hola</h2>
+                <h2><img id="img-dlc" src="/src/img/dlc-banner.png" alt=""></h2>
+                <p id="text-dlc">
+                    The Champions' Ballad introduces a new Main Quest, as well as several Side Quests to obtain new Items. After freeing the four Divine Beasts and speaking to the four leaders of each respective tribe, Link is telepathically contacted by Zelda who tells him to return to the Shrine of Resurrection on the Great Plateau. After inserting the Sheikah Slate in the pedestal there, a Monk known as Maz Koshia speaks to him. He promises Link that if he can prove his worth, he may tame a Divine Beast of his own.
+                </p>
             </div>
         </section>
     </div>
