update: agregue section de store

--- a/index.html
+++ b/index.html
@@ -128,12 +128,48 @@
         <!-- DLCs -->
         <section id="dlc-section">
             <div class="info">
-                <h2><img id="img-dlc" src="/src/img/dlc-banner.png" alt=""></h2>
+                <img id="img-dlc" src="/src/img/dlc-banner.png" alt="">
                 <p id="text-dlc">
-                    The Champions' Ballad introduces a new Main Quest, as well as several Side Quests to obtain new Items. After freeing the four Divine Beasts and speaking to the four leaders of each respective tribe, Link is telepathically contacted by Zelda who tells him to return to the Shrine of Resurrection on the Great Plateau. After inserting the Sheikah Slate in the pedestal there, a Monk known as Maz Koshia speaks to him. He promises Link that if he can prove his worth, he may tame a Divine Beast of his own.
+                    The Champions' Ballad introduces a new Main Quest, as well as several Side Quests to obtain new Items. After freeing the four Divine Beasts and speaking to the four leaders of each respective tribe, Link is telepathically contacted by Zelda who tells him to return to the Shrine of Resurrection on the Great Plateau.
                 </p>
             </div>
         </section>
+
+        <!-- GET THE GAME - STORE -->
+        <section id="get-the-game">
+            <h2>Get the game.</h2>
+
+            <div class="item-store">
+                <div class="left">
+                    <img src="/src/img/game.jpg" alt="">
+                </div>
+
+                <div class="right">
+                    <div class="info-product">
+                        <h3>The legend of Zelda: Breath of the wild.</h3>
+                        <h4>Compatible with <i>amiibo</i> figures.</h4>
+                        <p>
+                            Answer the call, the shadow of Calamity Ganon rises over the ashes of Hyrule. Craft your survival, defend the legend.
+                        </p>
+
+                        <button class="red-button">Buy amiibo <span class="material-icons">&#xe5cc;</span></button>
+
+                        <h4>Buy The legend of Zelda™: Breath of the wild.</h4>
+                        <p>U$S59.99</p>
+                        <select name="" id="">
+                            <option value="nintendo-switch">Nintendo Switch</option>
+                            <option value="nintendo-switch-oled">Nintendo Switch Oled</option>
+                        </select>
+                        <p>
+                            <button class="red-button">BUY NOW <span class="material-icons">&#xe5cc;</span></button>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- FOOTER -->
+        <footer></footer>
     </div>
     <script src="/src/js/main.js"></script>
 </body>
