cambio para el vite, saque el link css y puse type en script

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-    <link rel="stylesheet" href="/src/css/main.css">
-    <link rel="icon" type="image/ico" href="/src/img/favicon.ico"/>
+    <link rel="icon" type="image/ico" href="./src/img/favicon.ico"/>
     <title>The legend of Zelda™: Breath of the wild.</title>
 </head>
 <body>
@@ -23,7 +22,7 @@
                         </button>
 
                         <!-- Logo de nintendo -->
-                        <a href="#"><img src="/src/img/logo-nintendo.png" width="100px" alt=""></a>
+                        <a href="#"><img src="./src/img/logo-nintendo.png" width="100px" alt=""></a>
 
 
                         <div>
@@ -47,7 +46,7 @@
 
                 <!-- MENU DESKTOP -->
                 <ul id="nav-h">
-                    <li><a href="#"><img src="/src/img/logo-nintendo.png" width="90px" alt=""></a></li>
+                    <li><a href="#"><img src="./src/img/logo-nintendo.png" width="90px" alt=""></a></li>
                     <li><a href="#" class="link">Game Pass</a></li>
                     <li><a href="#" class="link">Games</a></li>
                     <li><a href="#" class="link link-hide">Devices</a></li>
@@ -77,7 +76,7 @@
 
         <!-- BANNER -->
         <section id="banner">
-            <img id="banner-img" src="/src/img/BotW_Logo_alternativo.png" width="250px" alt="">
+            <img id="banner-img" src="./src/img/BotW_Logo_alternativo.png" width="250px" alt="">
             <p id="banner-btn">
                 <a href="#" class="red-button">
                     Get it Now <span class="material-icons">&#xe5cc;</span>
@@ -128,7 +127,7 @@
         <!-- DLCs -->
         <section id="dlc-section">
             <div class="info">
-                <img id="img-dlc" src="/src/img/dlc-banner.png" alt="">
+                <img id="img-dlc" src="./src/img/dlc-banner.png" alt="">
                 <p id="text-dlc">
                     The Champions' Ballad introduces a new Main Quest, as well as several Side Quests to obtain new Items. After freeing the four Divine Beasts and speaking to the four leaders of each respective tribe, Link is telepathically contacted by Zelda who tells him to return to the Shrine of Resurrection on the Great Plateau.
                 </p>
@@ -141,7 +140,7 @@
 
             <div class="item-store">
                 <div class="left">
-                    <img src="/src/img/game.jpg" alt="">
+                    <img src="./src/img/game.jpg" alt="">
                 </div>
 
                 <div class="right">
@@ -171,6 +170,6 @@
         <!-- FOOTER -->
         <footer></footer>
     </div>
-    <script src="/src/js/main.js"></script>
+    <script src="./src/js/main.js" type="module"></script>
 </body>
 </html>
