--- a/index.html
+++ b/index.html
@@ -168,7 +168,16 @@
         </section>
 
         <!-- FOOTER -->
-        <footer></footer>
+        <footer>
+            <section class="copyright">
+                <p>Voces y texto en español</p>
+                <p>
+                    © 
+                    <span>2022</span>
+                    Nintendo. The Legend of Zelda, Wii U, y Nintendo Switch son marcas registradas de Nintendo.
+                </p>
+            </section>
+        </footer>
     </div>
     <script src="./src/js/main.js" type="module"></script>
 </body>
